# pi-pico-freertos

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
src/: freertos_hello_world.c
